// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new:component with example code and with state generates expected C.stories.tsx contents 1`] = `
"import decoratorCentered from \\"@storybook/addon-centered\\"
import { C } from \\"./C\\"

/**
 * See Storybook Docs: Writing Stories
 * https://storybook.js.org/docs/basics/writing-stories/
 */

export default {
  title: \\"C\\",
  decorators: [decoratorCentered],
}

export const example = () => <C />
"
`;

exports[`new:component with example code and with state generates expected C.test.tsx contents 1`] = `
"import { C } from \\"./C\\"
import { render, fireEvent } from \\"@testing-library/react\\"

describe(\\"C\\", () => {
  it(\\"has correct message before clicking\\", () => {
    // Arrange
    const message = \\"You clicked 0 times\\"

    // Act
    const { getByText } = render(<C />)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })

  it(\\"has correct message after clicking\\", () => {
    // Arrange
    const buttonText = \\"Click Me\\"
    const message = \\"You clicked 1 times\\"

    // Act
    const { getByText } = render(<C />)
    const button = getByText(buttonText)
    fireEvent.click(button)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })
})
"
`;

exports[`new:component with example code and with state generates expected C.tsx contents 1`] = `
"import { useState } from \\"react\\"

type Props = Readonly<{}>

export function C(_: Props) {
  const [count, setCount] = useState(0)

  return (
    <div>
      <p>You clicked {count} times</p>
      <button onClick={() => setCount(count + 1)}>Click Me</button>
    </div>
  )
}
"
`;

exports[`new:component with example code and with state generates expected README.md contents 1`] = `
"# \`<C />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![C](../../../.loki/reference/chrome_C_example.png)

> Image location: [\`.loki/reference/chrome_C_example.png\`](../../../.loki/reference/chrome_C_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^C example\\\\$\\"\`
"
`;

exports[`new:component with example code and with state generates expected index.ts contents 1`] = `
"export { C } from \\"./C\\"
"
`;

exports[`new:component with example code but without state generates expected B.stories.tsx contents 1`] = `
"import decoratorCentered from \\"@storybook/addon-centered\\"
import { B } from \\"./B\\"

/**
 * See Storybook Docs: Writing Stories
 * https://storybook.js.org/docs/basics/writing-stories/
 */

export default {
  title: \\"B\\",
  decorators: [decoratorCentered],
}

export const example = () => <B />
"
`;

exports[`new:component with example code but without state generates expected B.test.tsx contents 1`] = `
"import { B } from \\"./B\\"
import { render } from \\"@testing-library/react\\"

describe(\\"B\\", () => {
  it(\\"name prop is rendered\\", () => {
    // Arrange
    const name = \\"B\\"

    // Act
    const { getByText } = render(<B />)
    const received = getByText(name)

    // Assert
    expect(received).toBeDefined()
  })
})
"
`;

exports[`new:component with example code but without state generates expected B.tsx contents 1`] = `
"type Props = Readonly<{}>

export function B(_: Props) {
  return (
    <div>
      <p>B</p>
    </div>
  )
}
"
`;

exports[`new:component with example code but without state generates expected README.md contents 1`] = `
"# \`<B />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![B](../../../.loki/reference/chrome_B_example.png)

> Image location: [\`.loki/reference/chrome_B_example.png\`](../../../.loki/reference/chrome_B_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^B example\\\\$\\"\`
"
`;

exports[`new:component with example code but without state generates expected index.ts contents 1`] = `
"export { B } from \\"./B\\"
"
`;

exports[`new:component without example code generates expected A.stories.tsx contents 1`] = `
"import decoratorCentered from \\"@storybook/addon-centered\\"
import { A } from \\"./A\\"

/**
 * See Storybook Docs: Writing Stories
 * https://storybook.js.org/docs/basics/writing-stories/
 */

export default {
  title: \\"A\\",
  decorators: [decoratorCentered],
}

export const example = () => <A />
"
`;

exports[`new:component without example code generates expected A.test.tsx contents 1`] = `
"import { A } from \\"./A\\"

describe(\\"A\\", () => {
  it(\\"is defined\\", expect(A).toBeDefined)

  it.todo(\`add meaningful tests 👍\`)
})
"
`;

exports[`new:component without example code generates expected A.tsx contents 1`] = `
"export function A() {
  return <></>
}
"
`;

exports[`new:component without example code generates expected README.md contents 1`] = `
"# \`<A />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![A](../../../.loki/reference/chrome_A_example.png)

> Image location: [\`.loki/reference/chrome_A_example.png\`](../../../.loki/reference/chrome_A_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^A example\\\\$\\"\`
"
`;

exports[`new:component without example code generates expected index.ts contents 1`] = `
"export { A } from \\"./A\\"
"
`;
